# ABHAY-Accounting-OS

./: .gitignore  .vercelignore  TESTING_REPORT.md  package-lock.json  package.json
apps/api/: .dockerignore  .env.example  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/routes/: accounting.py  ai_accountant.py  ai_command.py  ai_entry.py  auth.py  automation.py  bank_reconciliation.py  document_intelligence.py  financial_intelligence.py
apps/api/app/core/: config.py  database.py  security.py
apps/api/app/domain/: __init__.py
apps/api/app/domain/accounting/: __init__.py  demo_seed.py  engine.py  financial_intelligence.py  invoices.py
apps/api/app/domain/ai/: __init__.py  accountant.py
apps/api/app/domain/automation/: __init__.py  intelligence.py
apps/api/app/domain/banking/: __init__.py  reconciliation.py
apps/api/app/models/: accounting.py
apps/api/app/repositories/: accounting.py
apps/api/app/schemas/: accounting.py  ai_accountant.py  ai_entry.py  automation.py  bank_reconciliation.py  document_intelligence.py  financial_intelligence.py
apps/api/migrations/: 20260619_persistent_storage.sql  20260620_database_stabilization.sql
apps/api/tests/: test_access_requests.py  test_accounting_engine.py  test_ai_accountant.py  test_ai_command.py  test_automation.py  test_bank_reconciliation.py  test_document_intelligence.py  test_financial_intelligence.py  test_invoice_compliance.py  test_security.py
apps/spring-api/: README.md  (+2 more)
infra/: compose.yaml  env.example
outputs/: ABHAY_DATABASE_SCHEMA.sql  ABHAY_PHASE_0_ARCHITECTURE.md
(+390 files in other folders)
