[project]
name = "abhay-api"
version = "0.1.0"
description = "FastAPI backend for ABHAY Accounting OS"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.5.0",
  "PyJWT[crypto]>=2.9.0",
  "httpx>=0.27.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.2.0"
  "psycopg2-binary>=2.9.9"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

